# logistics

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  pitch_deck_script.md  pyproject.toml
.github/workflows/: deploy.yml
docs/: frontend_prd.md  ingestion.md  optimization_execution_agent-v1.md  prediction.md  walkthrough.md
infra/: Caddyfile  docker-compose.yml
infra/flink/: Dockerfile
infra/scripts/: init_topics.py
services/: __init__.py
services/bridge/: package-lock.json  package.json  server.js
services/dashboard/: index.html  package-lock.json  package.json  vite.config.js
services/dashboard/src/: App.jsx  index.css
services/dashboard/src/lib/: socket.js  (+1 more)
services/ingestion/: __main__.py  cli.py  config.py
services/ingestion/api/: app.py  dependencies.py
services/ingestion/generators/: __init__.py  routes.py  telemetry.py  threats.py
services/ingestion/producers/: __init__.py  kafka.py
services/llm-service/: Dockerfile  check_models.py  consumer.py  gemini_client.py  main.py  prompt_builder.py  requirements.txt  rule_engine.py  verify_llm.py  vertex_client.py
services/prediction/: __init__.py  config.py
services/prediction/context_assembly/: __init__.py  __main__.py  assembler.py  consumer.py
services/prediction/flink_job/: __init__.py  collision_job.py  geometry.py
shared/schemas/: __init__.py  anomaly.py  optimization.py  routes.py  telemetry.py  threats.py
tests/: conftest.py  test_api.py  test_context_assembly.py  test_generators.py  test_geometry.py  test_prediction_schemas.py  test_schemas.py
(+22 files in other folders)
