[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logistics"
version = "0.1.0"
description = "Resilient Logistics & Dynamic Supply Chain Optimization Engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "aiokafka>=0.10.0",
    "redis[hiredis]>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "fakeredis[json]>=2.23.0",
]

[project.scripts]
logistics-ingest = "services.ingestion.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["services", "shared"]
